--- a/locales/en-US/pipe2jpeg.json
+++ b/locales/en-US/pipe2jpeg.json
@@ -11,9 +11,7 @@
     "error": {
       "base_path_invalid": "basePath \"__basePath__\" is invalid",
       "base_path_duplicate": "basePath \"__basePath__\" is already in use",
-      "pipe2jpeg_not_found": "pipe2jpeg not found for \"__basePath__\"",
-      "mjpeg_video_not_found": "mjpeg video not found for \"__basePath__\"",
-      "jpeg_image_not_found": "jpeg image not found for \"__basePath__\""
+      "jpeg_data_not_found": "jpeg data not found for \"__basePath__\""
     }
   }
 }
